objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>HELMS</fullName>
        <description>Placeholder for HELMS</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Manual Validation</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Ready to Convert</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AcuraCurrentProductsOwned2_TXT__c</fullName>
        <label>Acura Current Products Owned 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcuraCurrentProductsOwned_TXT__c</fullName>
        <label>Acura Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcuraHighValueTrimlinePropensity_NUM__c</fullName>
        <label>Acura High Value Trimline Propensity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcuraOwnershipStatusHousehold_TXT__c</fullName>
        <label>Acura Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcuraOwnershipStatus_TXT__c</fullName>
        <label>Acura Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressType_TXT__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>work</fullName>
                </value>
                <value>
                    <fullName>home</fullName>
                </value>
                <value>
                    <fullName>delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Cache_Status__c</fullName>
        <label>Address Cache Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Genuine</fullName>
                </value>
                <value>
                    <fullName>Cache</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Error_CD__c</fullName>
        <label>Address Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Error_Description_TXT__c</fullName>
        <label>Address Error Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Status_TXT__c</fullName>
        <label>Address Status</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppartmentNumber_TXT__c</fullName>
        <label>Apartment Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantNumber_TXT__c</fullName>
        <label>Applicant Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_and_Time__c</fullName>
        <label>Appointment Date and Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Id__c</fullName>
        <label>Appointment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Location__c</fullName>
        <label>Appointment Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Notes__c</fullName>
        <label>Appointment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_type__c</fullName>
        <label>Appointment type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BalanceAmount_NUM__c</fullName>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BalanceType_TXT__c</fullName>
        <label>Balance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyStyle_TXT__c</fullName>
        <label>BodyStyle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BrandsiteShoppingTool_TXT__c</fullName>
        <label>Brandsite Shopping Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIAM_User_Id__c</fullName>
        <label>CIAM User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CID_TXT__c</fullName>
        <label>CID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_TXT__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sedans</fullName>
                </value>
                <value>
                    <fullName>Hatchbacks</fullName>
                </value>
                <value>
                    <fullName>Supercar</fullName>
                </value>
                <value>
                    <fullName>Touring</fullName>
                </value>
                <value>
                    <fullName>Cruiser</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Supersport</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Neo Sports Cafe</fullName>
                </value>
                <value>
                    <fullName>miniMOTO</fullName>
                </value>
                <value>
                    <fullName>Dual Sport</fullName>
                </value>
                <value>
                    <fullName>Scooter</fullName>
                </value>
                <value>
                    <fullName>Trail</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Adventure</fullName>
                </value>
                <value>
                    <fullName>Rec/Utility</fullName>
                </value>
                <value>
                    <fullName>Home Back-up</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Recreational</fullName>
                </value>
                <value>
                    <fullName>Super Quiet</fullName>
                </value>
                <value>
                    <fullName>Economy</fullName>
                </value>
                <value>
                    <fullName>Lawn Mowers</fullName>
                </value>
                <value>
                    <fullName>HRX Series</fullName>
                </value>
                <value>
                    <fullName>HRN Series</fullName>
                </value>
                <value>
                    <fullName>HRS Series</fullName>
                </value>
                <value>
                    <fullName>HRC Series</fullName>
                </value>
                <value>
                    <fullName>MIIMO</fullName>
                </value>
                <value>
                    <fullName>Mini Tiller</fullName>
                </value>
                <value>
                    <fullName>Mid-Tine Tiller</fullName>
                </value>
                <value>
                    <fullName>Rear-Tine Tiller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cell_Phone_Error_CD__c</fullName>
        <label>Mobile Phone Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone_Error_Description_TXT__c</fullName>
        <label>Mobile Phone Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chat_Transcript__c</fullName>
        <description>This field is used to store chat Transcript on Lead Object</description>
        <label>Chat Transcript</label>
        <length>61000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CleansedAddress_TXT__c</fullName>
        <label>Cleansed Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Color_TXT__c</fullName>
        <label>Color</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Color_XML__c</fullName>
        <label>Color XML</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_TXT__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>excellent</fullName>
                </value>
                <value>
                    <fullName>good</fullName>
                </value>
                <value>
                    <fullName>fair</fullName>
                </value>
                <value>
                    <fullName>poor</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactKey_TXT__c</fullName>
        <label>Contact Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMethod_TXT__c</fullName>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Business Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Email Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactTime_TXT__c</fullName>
        <label>Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>afternoon</fullName>
                </value>
                <value>
                    <fullName>nopreference</fullName>
                </value>
                <value>
                    <fullName>day</fullName>
                </value>
                <value>
                    <fullName>morning</fullName>
                </value>
                <value>
                    <fullName>evening</fullName>
                </value>
                <value>
                    <fullName>anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactType_TXT__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_person__c</fullName>
        <label>Contact person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Time_in_Minute__c</fullName>
        <formula>if( (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &lt;1 ,&apos;Less Than 1 minute&apos; ,
if( (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &gt;=1 &amp;&amp; (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &lt;=5 ,&apos;1 to 5 minutes&apos; ,if( (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &gt;=5 &amp;&amp; (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &lt;=15 ,&apos;5 to 15 minutes&apos; ,if( (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &gt;=15 &amp;&amp; (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &lt;=30 ,&apos;15 to 30 minutes&apos; ,if( (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &gt;=30 &amp;&amp; (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &lt;=120 ,&apos;30 minutes to 2 hours&apos; ,if( (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &gt;=120 &amp;&amp; (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &lt;=1440 ,&apos;2 to 24 hours&apos; ,if( (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &gt;=1440 &amp;&amp; (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &lt;=2880 ,&apos;24 to 48 hours&apos; ,if( (ConvertedDate-DATEVALUE(CreatedDate))*24*60 &gt;=2880 ,&apos;More than 48 hours&apos; ,&apos;&apos;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Time in Minute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Currency_AM__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerAccount_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Customer Account)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Ids_ID__c</fullName>
        <label>Customer IDs</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DEPOSIT_AMOUNT__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMGR_Age__c</fullName>
        <description>Holds the Age with the purpose of Demographics analysis.</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMGR_Baseball__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Baseball</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Basketball__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basketball</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Children__c</fullName>
        <description>Number of children with the purpose of Demographics analysis.</description>
        <label>Children</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Education_Level__c</fullName>
        <description>Indicates the last level of education</description>
        <label>Education Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Environmental_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environmental Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Football__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Football</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Golf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Golf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Green_Living__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the customer has a green home</description>
        <label>Green Living</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Hockey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hockey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Home_Owner_or_Renter__c</fullName>
        <description>Indicates the real state status of the opportunity  with the purpose of Demographics analysis.</description>
        <label>Home Owner or Renter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Household_Size__c</fullName>
        <description>Represents the number of persons living in a private household</description>
        <label>Household Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMGR_Income_Estate_HHLD_Higher_Ranges__c</fullName>
        <description>Represents the ranking of HOUSEHOLD INCOME AND WEALTH</description>
        <label>Income Estate HHLD Higher Ranges</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Income__c</fullName>
        <description>Holds the approximated amount of income  with the purpose of Demographics analysis.</description>
        <label>Income</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Marital_Status__c</fullName>
        <description>Represents the Marital status  with the purpose of Demographics analysis.</description>
        <label>Marital Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Occupation_Detailed__c</fullName>
        <description>Short description of the responsibilities from the Occupation</description>
        <label>Occupation Detailed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Occupation__c</fullName>
        <description>Name of the Occupation</description>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Outdoors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outdoors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Photography__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photography</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Skiing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skiing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_US_Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Vehicle_Known_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the customer owns a Honda Vehicle</description>
        <label>Vehicle Known Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSP_Update_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSP Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateofLastService_DT__c</fullName>
        <label>Date of Last Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Link__c</fullName>
        <label>Deal Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerAccountfromADF_TXT__c</fullName>
        <label>Dealer Account from ADF</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DealerContactfromADF_TXT__c</fullName>
        <label>Dealer Contact from ADF</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DealerID_ID__c</fullName>
        <label>DealerID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Address_TXT__c</fullName>
        <formula>PreferredDealerAccount_ID__r.ShippingStreet +&apos; &apos;+ PreferredDealerAccount_ID__r.ShippingCity + &apos; &apos;+   PreferredDealerAccount_ID__r.ShippingState +&apos; &apos;+ 
PreferredDealerAccount_ID__r.ShippingPostalCode +&apos; &apos;+ 
PreferredDealerAccount_ID__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Assignment_Type__c</fullName>
        <label>Dealer Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Selected</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Proximity</fullName>
                </value>
                <value>
                    <fullName>LDRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_CRM_Vendor__c</fullName>
        <formula>PreferredDealerAccount_ID__r.DealerCRMVendor_TXT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer CRM Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Email_TXT__c</fullName>
        <formula>PreferredDealerContact_ID__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Ids_ID__c</fullName>
        <label>Dealer IDs</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_NUM_TXT__c</fullName>
        <formula>PreferredDealerAccount_ID__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delta_TXT__c</fullName>
        <label>Delta</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Confirmation_Number__c</fullName>
        <description>Verification number of deposits of founds in reserve for the Lead</description>
        <label>Deposit Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_IP_Addres_URL__c</fullName>
        <description>IP addres of the source of the deposit</description>
        <label>Customer IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Sales_Order_Number__c</fullName>
        <description>Represents the Sales Order number for the Reservation</description>
        <label>Deposit Sales Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Taken_By__c</fullName>
        <label>Deposit Taken By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <formula>DISTANCE(  GEOLOCATION( Latitude , Longitude ) ,   GEOLOCATION( PreferredDealerAccount_ID__r.ShippingLatitude,  PreferredDealerAccount_ID__r.ShippingLongitude )  , &apos;mi&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_from_Dealer__c</fullName>
        <label>Distance from Dealer</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_CD__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doors_TXT__c</fullName>
        <label>Doors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duplicate_MiddlewareUID__c</fullName>
        <label>Duplicate MiddlewareUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_Acura_Vehicles_Owned__c</fullName>
        <description>Number of Owned vehicles from Acura Division</description>
        <label>Acura Vehicles Owned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Children_in_Household__c</fullName>
        <description>Represents the number of children within the house</description>
        <label>Customer Insight Children in Household</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Event_Attendance__c</fullName>
        <description>Shows how many Honda Events customer has attended</description>
        <label>Customer Insight Event Attendance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Extended_Warranty__c</fullName>
        <description>Details of the extended warranty</description>
        <label>Customer Insight Extended Warranty</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Likely_to_Buy_Acura__c</fullName>
        <label>Customer Insight Likely to Buy Acura</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Likely_to_Buy_Honda__c</fullName>
        <label>Customer Insight Likely to Buy Honda</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Likely_to_Buy_PSP__c</fullName>
        <label>Customer Insight Likely to Buy PSP</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Ownership_Details__c</fullName>
        <label>Customer Insight Ownership Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Ownership__c</fullName>
        <label>Customer Insight Ownership</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Service_History__c</fullName>
        <description>Shows the service history of a customer</description>
        <label>Customer Insight Service History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ENR_Extended_Warranty_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Car has Extended Warranty</description>
        <label>Extended Warranty Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENR_Honda_Vehicles_Owned__c</fullName>
        <description>Number of owned vehicles from Honda Division</description>
        <label>Honda Vehicles Owned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENR_Likeliness_to_Buy_Acura__c</fullName>
        <description>The likeliness the customer would purchase an Acura</description>
        <label>Customer Likeliness to Buy Acura</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_Likeliness_to_Buy_Honda__c</fullName>
        <description>A customers likeliness to purchase a Honda.</description>
        <label>Customer Likeliness to Buy Honda</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_Likeliness_to_Buy_PSP__c</fullName>
        <description>Customer likeliness to buy a PowerSports vehicle</description>
        <label>Customer Likeliness to Buy PSP</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_Ownership_Type__c</fullName>
        <description>Type of ownership</description>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current Owner</fullName>
                </value>
                <value>
                    <fullName>Former Owner</fullName>
                </value>
                <value>
                    <fullName>No Owner</fullName>
                    <default>true</default>
                    <label>No Owner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENR_Power_Equipment_Vehicles_Owned__c</fullName>
        <description>Number of owned vehicles from PE Division</description>
        <label>Power Equipment Vehicles Owned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENR_Power_Sports_Vehicles_Owned__c</fullName>
        <description>Number of owned vehicles from PSP Division</description>
        <label>Power Sports Vehicles Owned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENR_Total_Spent_on_Service_by_Customer__c</fullName>
        <description>Amount spent in car services without a warranty</description>
        <label>Total Spent on Service by Customer</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENR_Total_Spent_on_Service_by_Warranty__c</fullName>
        <description>Amount spent in car services by the Warranty of the car</description>
        <label>Total Spent on Service by Warranty</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Cache_Status__c</fullName>
        <label>Email Cache Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Genuine</fullName>
                </value>
                <value>
                    <fullName>Cache</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_CheckedDate_TXT__c</fullName>
        <label>Email Checked Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Error_CD__c</fullName>
        <label>Email Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>